[package]
name = "hw_os"
version = "0.1.0"
edition = "2018"
authors = ["Heliomar Junior <xenia@null.net>"]

[dependencies]
spin = "0.5.2"
bootloader = "0.9.23"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
